Stable Home Page

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,25 @@
   <link rel="icon" href="logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>GalactoMind AGI</title>
+  <!-- SEO -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Explore the limitless intelligence of GalactoMind by Code Explorer. Pioneering AGI for a cosmic future.">
+  <meta name="keywords"
+    content="GalactoMind, artificial general intelligence, AGI, Code Explorer, cosmic intelligence, Pabitra Banerjee">
+  <meta name="author" content="Pabitra Banerjee">
+  <meta name="robots" content="index, follow">
+  <meta name="og:title" content="GalactoMind by Code Explorer">
+  <meta name="og:description"
+    content="Pioneering AGI for a cosmic future. Explore the limitless intelligence of GalactoMind by Code Explorer.">
+  <meta name="og:image" content="logo.png">
+  <meta name="og:url" content="https://galctomind.explorecode.live">
+  <meta name="og:site_name" content="GalactoMind by Code Explorer">
+
   <!-- Google Web Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
